--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@
     border: 1px solid black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+/* HEADER------------------------------------------------------------------------------------------ */
 header{
     height: 60px;
     border-bottom: 1px solid gray;
@@ -66,6 +67,7 @@ header{
 .header_seach-box::placeholder{
     padding-left: 30px;
 }
+/* app------------------------------------------------------------------------------------ */
 .container{
 
 }
@@ -195,6 +197,7 @@ right: 0;
     margin-top: 20px;
 
 }
+/* FOOTTER ------------------------------------------------------------------------------------------- */
 footer{
     margin-top: 30px;
     padding: 0 120px;
